
#------------------------------------------------------------------------------------#
#                        Plug-in directories                                         #
#------------------------------------------------------------------------------------#
add_subdirectory(audio)
add_subdirectory(cost_functions)
add_subdirectory(unit_db)
add_subdirectory(window_functions)
add_subdirectory(wave_generation)

