######################################################################################
##                                                                                  ##
## AUTHOR  : Aby Louw                                                               ##
## DATE    : 11 June 2010                                                           ##
##                                                                                  ##
######################################################################################
##                                                                                  ##
## CMakeList for linguistic plug-ins                                                ##
##                                                                                  ##
##                                                                                  ##
######################################################################################

#------------------------------------------------------------------------------------#
#                        Plug-in directories                                         #
#------------------------------------------------------------------------------------#

add_subdirectory(addendum)
add_subdirectory(cost_functions)
add_subdirectory(g2p)
add_subdirectory(lexicon)
add_subdirectory(phoneset)
add_subdirectory(syllabification)

