
#------------------------------------------------------------------------------------#
#                        Plug-in directories                                         #
#------------------------------------------------------------------------------------#
add_subdirectory(formats)
add_subdirectory(objects)
add_subdirectory(files)