
#------------------------------------------------------------------------------------#
#                        Plug-in directories                                         #
#------------------------------------------------------------------------------------#
add_subdirectory(f0_distance)
add_subdirectory(power_distance)
add_subdirectory(spectral_distance)

