
#------------------------------------------------------------------------------------#
#                        Plug-in directories                                         #
#------------------------------------------------------------------------------------#
add_subdirectory(interface)
add_subdirectory(hanning)
add_subdirectory(rectangular)
