######################################################################################
##                                                                                  ##
## AUTHOR  : Giovanni Mazzocchin                                                               ##
## DATE    : 31 May 2016                                                           ##
##                                                                                  ##
######################################################################################
##                                                                                  ##
## CMakeList for italian language specific plug-ins                                 ##
##                                                                                  ##
##                                                                                  ##
######################################################################################

#------------------------------------------------------------------------------------#
#                        Plug-in directories                                         #
#------------------------------------------------------------------------------------#

add_subdirectory(ita_IT)  # Standard Italian


