######################################################################################
##                                                                                  ##
## AUTHOR  : Aby Louw                                                               ##
## DATE    : August 2010                                                            ##
##                                                                                  ##
######################################################################################
##                                                                                  ##
## CMakeList for Kiswahili language specific plug-ins                               ##
##                                                                                  ##
##                                                                                  ##
######################################################################################

#------------------------------------------------------------------------------------#
#                        Plug-in directories                                         #
#------------------------------------------------------------------------------------#

add_subdirectory(swa) # Standard Kiswahili


