
#------------------------------------------------------------------------------------#
#                        Plug-in directories                                         #
#------------------------------------------------------------------------------------#
add_subdirectory(left_context)
#add_subdirectory(num_syls)
#add_subdirectory(right_context)
#add_subdirectory(syl_pos)
#add_subdirectory(word_pos)


